--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@prb/solidity-template",
-  "description": "Template for writing Solidity smart contracts",
+  "name": "eip712-vc",
+  "description": "On-chain verification of Verifiable Credentials",
   "version": "1.0.0",
   "author": {
-    "name": "Paul Razvan Berg",
-    "url": "https://github.com/paulrberg"
+    "name": "ra-phael",
+    "url": "https://github.com/ra-phael"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -19,6 +19,7 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@openzeppelin/contracts": "^4.7.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
@@ -64,7 +65,8 @@
     "ethereum",
     "hardhat",
     "smart-contracts",
-    "solidity"
+    "solidity",
+    "verifiable-credentials"
   ],
   "packageManager": "yarn@3.2.0",
   "publishConfig": {
